# synesthetic-visualizer

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  dsp.rs  gpu.rs  main.rs
src/shaders/: tonnetz.wgsl
