[package]
name = "synesthetic_visualizer"
version = "0.1.0"
edition = "2021"
description = "A native, real-time audio visualizer rendering harmonic relationships via GPU."

[dependencies]
cpal = "0.15"
rustfft = "6.1"
ringbuf = "0.4"
crossbeam = "0.8"
nannou = "0.19"
bytemuck = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true

[patch.crates-io]
noise = { path = "vendor/noise-rs" }
